...
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Text(
              'Features:',
              style: TextStyle(fontSize: 18.0, fontWeight: FontWeight.bold),
            ),
            FutureBuilder<PokemonData>(
              future: fetchPokemonData(pokemonName, http.Client()),
              builder: (context, snapshot) {
                print('Snapshot: $snapshot');
...
